<resources>
    <string name="app_name">Gerenciamento de Convidados</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="configuracoes">Configurações</string>
    <string name="ausentes">Ausentes</string>
    <string name="presentes">Presentes</string>
    <string name="todos">Todos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="nao_confirmado">Não confirmado</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="nome_obrigatorio">Nome é obrigatório.</string>
    <string name="salvo_com_sucesso">Convidado salvo com sucesso.</string>
    <string name="erro_ao_salvar">Erro ao salvar.</string>
    <string name="remocao_de_convidado">Remoção de convidado</string>
    <string name="deseja_remover_o_convidado">Deseja remover o convidado?</string>
    <string name="resposta_sim">Sim</string>
    <string name="resposta_nao">Não</string>
    <string name="total">Total</string>
    <string name="convidado_removido_com_sucesso">Convidado removido com sucesso.</string>
    <string name="documento">Documento</string>
    <string name="gerenciamento_de_convidados">Gerenciamento de Convidados</string>
    <string name="confirmacao">Confirmação</string>
</resources>
